--- a/blocks/profile/__text/profile__text.css
+++ b/blocks/profile/__text/profile__text.css
@@ -1,3 +1,4 @@
 .profile__text {
   color: #fff;
+  max-width: 460px;
 }
